css/style.css
/* ... */
.leaflet-marker-icon-default {
    filter: hue-rotate(150deg)
}

.navbar {
    z-index: 5;
}

#spectrogram, [id$=compareSpec] {
    position: absolute;
    width: 100%;
    z-index:0;
}

.spec-labels {
    width: 55px !important;
}

#primaryLogo {
    max-height: calc(40px * var(--font-size-scale));
    max-width: auto;
}

.icon {
    max-height: calc(30px * var(--font-size-scale));
    max-width: calc(30px * var(--font-size-scale));
    filter: invert(45%);

}

#list-icon:hover>img {
    filter: invert(100%);
}

img {
    img {
        width: calc(100 * var(--font-size-scale)); /* Scale width */
        height: auto; /* Maintain aspect ratio */
    }
}

span[id^="filename_"] {
    border-bottom: 1px;
    border-bottom: #818182;
    left: 25px;
    z-index: 2;
}


.filename {
    margin-left: auto;
    margin-right: auto;
}

.pointer {
    cursor: pointer;
}

#controlsWrapper {
    cursor: move;
}

#controlsWrapper .row,
#transport-controls {
    min-width: 850px;
    white-space: nowrap;
    height: calc(40px * var(--font-size-scale));
    z-index: 9;
}


div#contentWrapper {
    background: #dbe2ed url(../img/Redwing-flight.png);
    background-size: cover;
    position: absolute;
    top: calc(56px * var(--font-size-scale));
    width: 100%;
    opacity: 0;
    transition: opacity 2.5s ease;
}

div#contentWrapper.loaded {
    opacity: 1;
    /* Change background opacity to 1 when the body has the "loaded" class */
}

.zoom {
    position: absolute;
    font-size: calc(32px * var(--font-size-scale));;
}
.zoom-xc {
    font-size: calc(32px * var(--font-size-scale));;
}
.species-selector {
    position: relative;
}

select {
    margin-bottom: 0.2em;
    /* Add some space below the input */
    max-width: 25em
}

.dropdown-menu {
    min-width: 320px;
}

.shortcut {
    color: #666;
    font-size: calc(14px * var(--font-size-scale));
    vertical-align: -webkit-baseline-middle;
}

ul {
    /* Remove default list styling */
    list-style-type: none;
    padding: 0;
    margin: 0;

}


.bird-list {
    overflow: auto;
    margin-right: 0;
    max-height: 250px;
    max-width: 320px;
}


.bird-list li a {
    border: 1px solid #ddd;
    /* Add a border to all links */
    margin-top: -1px;
    /* Prevent double borders */
    background-color: #f6f6f6;
    /* Grey background color */
    padding: 10px;
    /* Add some padding */
    text-decoration: none;
    /* Remove default text underline */
    font-size: calc(14px * var(--font-size-scale));
    /* Increase the font-size */
    color: black;
    /* Add a black text color */
    display: block;
    /* Make it into a block element to fill the whole list */
}

.bird-list li a:hover:not(.header) {
    background-color: #eee;
    /* Add a hover effect to all links, except for headers */
}

/* make dropdown stick to row */
.table-active {
    overflow: visible;
    position: relative;
    font-weight: bolder;
    scroll-margin-top: 60px;
}

/* Custom CSS to style the link */
.xc-link {
    color: #6c757d; /* Bootstrap's text-muted color */
    text-decoration: none; /* Remove underline */
    transition: color 0.3s; /* Smooth color transition */
}

.xc-link:hover {
    color: whitesmoke; /* White color on hover */
}

#results>thead,
#results>th,
#resultSummary>thead,
#resultSummary>th {
    position: sticky;
    top: 0;
    z-index: 2;
}

/* Stop table-hover overriding the text colour */
.table-hover tbody tr.text-warning:hover td {
    color: #ffae42; /* Change to your desired text color */
}


region.wavesurfer-region:before {
    content: attr(data-region-label);
    position: absolute;
    color: beige;
    top: 10px;
    padding-left: 5px;
}

region.wavesurfer-region[data-region-highlight] {
    border: 1px solid rgb(86, 180, 239);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 2px 0 8px rgba(266, 255, 236, 0.6);
}

.nighttime {
    background-color: rgba(0, 0, 72, 0.2);
}

.daytime {
    background-color: rgba(86, 180, 239, 0.2);
}


.table {
    margin-bottom: 0;
}

/* Disable blue selection highlight in drag */
:not(input):not(textarea),
:not(input):not(textarea)::after,
:not(input):not(textarea)::before {
    user-select: none;
    /*cursor: default; */
}


.chart-outer {
    height: 520px;
    margin: 0 1em 1em;
    width: 100%;
    display: flex;
}

#chart-week {
    height: 520px;
    width: 100%;
    display: flex;
    order: 1;
    margin: 30px 1em 1em;
}



/* Scrollbar */

/* width */
::-webkit-scrollbar {
    width: 0.75em;
    height: 0.5em;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 0.25em;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: slategray;
    border-radius: 0.25em;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: orangered;
}

footer {
    position: absolute;
    bottom: 0;
    height: calc(30px * var(--font-size-scale));
    text-align: center;
    width: 100%;
    z-index: 1000;
}

#speciesModal {
    max-height: 90%;
}

/* Flip comment icons */

.flipped {
    transform: scaleY(-1);
}

#dropdownMenuButton {
    max-width: 40vw;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.dropdown-menu-dark {
    overflow: auto;
  max-height: 30vh;
}

#fileContainer {
    max-width: 40vw;
}

.filename,
.dropdown-menu-dark>a {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 5px;
    align-self: center;
}
/* ... */

